--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,12 @@ name: Build Stick Fighter EXE
 on:
   push:
     branches: [ "main", "master" ]
+    tags: 
+      - 'v*'
   workflow_dispatch:
+
+permissions:
+  contents: write
 
 jobs:
   build:
@@ -21,7 +26,6 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
-        # If npm ci fails due to lockfile mismatch, try: npm install
 
       - name: Build EXE
         run: npm run app:build
@@ -34,3 +38,10 @@ jobs:
           name: Stick-Fighter-Windows
           path: dist/*.exe
           retention-days: 5
+
+      - name: Create Release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: dist/*.exe
+          generate_release_notes: true
