build: Update product name to Stick-Fighter in package.json.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     },
     "build": {
         "appId": "com.stickfighter.game",
-        "productName": "Stick Fighter",
+        "productName": "Stick-Fighter",
         "files": [
             "**/*",
             "!src/**/*.ts"
