--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "license": "MIT",
     "dependencies": {
         "express": "^4.18.2",
+        "pngjs": "^7.0.0",
         "socket.io": "^4.6.1"
     },
     "devDependencies": {
